--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,12 +8,12 @@ android {
     compileSdkVersion 34
 
     defaultConfig {
-//        applicationonId "org.dslul.openboard.inputmethod.latin"
+//        applicationId "org.dslul.openboard.inputmethod.latin"
         applicationId "com.guru.translate.translator.pro.translation.keyboard.translator"
         minSdkVersion 27
         targetSdkVersion 34
-        versionCode 41
-        versionName '3.3.1'
+        versionCode 43
+        versionName '4.0'
     }
 
     buildTypes {
@@ -148,9 +148,6 @@ dependencies {
     implementation("com.google.ads.mediation:pangle:6.0.0.8.0")
 
     implementation "com.google.guava:guava:31.0.1-android"
-    implementation 'androidx.activity:activity:1.9.1'
-
-
 }
 
 repositories {
