--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,15 +5,15 @@ apply plugin: 'com.google.firebase.crashlytics'
 apply plugin: 'com.google.gms.google-services'
 
 android {
-    compileSdkVersion 34
+    compileSdk 34
 
     defaultConfig {
 //        applicationId "org.dslul.openboard.inputmethod.latin"
         applicationId "com.guru.translate.translator.pro.translation.keyboard.translator"
         minSdkVersion 27
-        targetSdkVersion 34
-        versionCode 43
-        versionName '4.0'
+        targetSdk 34
+        versionCode 48
+        versionName '4.5'
     }
 
     buildTypes {
@@ -24,6 +24,7 @@ android {
             renderscriptDebuggable false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+
         debug {
             minifyEnabled false
             debuggable true
