--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,7 @@ android {
             enableSplit = false
         }
     }
+    namespace 'org.dslul.openboard.inputmethod.latin'
 }
 
 dependencies {
@@ -136,7 +137,9 @@ dependencies {
 
     implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
 
-    api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
+//    api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
+    implementation 'com.vanniktech:android-image-cropper:4.3.3'
+
 
     implementation 'com.google.android.ump:user-messaging-platform:2.1.0'
     implementation 'androidx.activity:activity:1.9.0'
