--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,18 @@ android {
         }
     }
 
+    compileOptions {
+        sourceCompatibility = JavaVersion.VERSION_17
+        targetCompatibility = JavaVersion.VERSION_17
+    }
+
+    kotlinOptions {
+        jvmTarget = "17" // ✅ supported
+    }
+
+    kotlin {
+        jvmToolchain(17)
+    }
     configurations {
         cleanedAnnotations
         compile.exclude group: 'org.jetbrains', module: 'annotations'
@@ -63,6 +75,7 @@ android {
             enableSplit = false
         }
     }
+    namespace 'org.dslul.openboard.inputmethod.latin'
 }
 
 dependencies {
@@ -138,7 +151,8 @@ dependencies {
 
     implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
 
-    api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
+//    api 'com.theartofdev.edmodo:android-image-cropper:2.8.0'
+    implementation 'com.vanniktech:android-image-cropper:4.3.3'
 
     implementation 'com.google.android.ump:user-messaging-platform:2.1.0'
 
